--- a/src/pages/home/GlobalStyles.css
+++ b/src/pages/home/GlobalStyles.css
@@ -299,9 +299,73 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+#quantidadetotal {
+    font-size: 4vh;
+    text-align: center;
+    margin-top: 2vh;
+}
+
 .button-serie:active {
     transform: translateY(0);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+    display: flex;
+    background-color: #ffffff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 2.5vh;
+    width: 50vh;
+    border-radius: 1.5vh;   
+    box-shadow: 0 0.6vh 1.2vh rgba(0, 0, 0, 0.1);
+    text-shadow: 0.2vh 0.2vh 0.4vh rgba(0, 0, 0, 0.2);
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.2vh;
+    margin: 2vh auto;
+    padding: 7vh;
+}
+
+#quantidadetotal {
+    font-size: 5vh;
+    text-align: center;
+    margin-top: 2vh;
+    font-weight: bold;
+}
+
+#buttonRecebimento {
+    font-weight: bold;
+    float: right;
+    background-color: rgb(219, 219, 219);
+    border: none;
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vh;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 1.5vh;
+    transition: all 0.3s ease;
+    box-shadow: 0 0.6vh 1.2vh rgba(0, 0, 0, 0.1);
+    text-shadow: 0.2vh 0.2vh 0.4vh rgba(0, 0, 0, 0.2);
+    padding: 1vh;
+}
+
+#buttonRecebimento:hover {
+    background-color: #ffffff;
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 @media (max-width: 600px) {
