--- a/src/pages/home/GlobalStyles.css
+++ b/src/pages/home/GlobalStyles.css
@@ -368,6 +368,58 @@ body {
     justify-content: flex-end;
 }
 
+#TabelaDasTurmas {
+    margin: 0 auto;
+    height: 150vh;
+    width: 150vh;
+
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+  }
+  
+  th {
+    background-color: #f0f0f0;
+  }
+  
+  td {
+    background-color: #fff;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  tr:hover {
+    background-color: #f2f2f2;
+  }
+  
+  .serie {
+    font-weight: bold;
+  }
+  
+  .turma {
+    font-size: 16px;
+  }
+  
+  .vazio {
+    background-color: #fff;
+    color: #ccc;
+  }
+
 @media (max-width: 600px) {
     .button-container-serie {
         grid-template-columns: 1fr 1fr;
